More boundary-level literal updates

--- a/rollup/core/classes/RollupDateLiteral.cls
+++ b/rollup/core/classes/RollupDateLiteral.cls
@@ -534,11 +534,15 @@ public without sharing abstract class RollupDateLiteral {
   private virtual class ThisQuarterLiteral extends RollupDateLiteral {
     public ThisQuarterLiteral() {
       this.ref = getRelativeDatetime(this.getThisQuarterStart(), START_TIME);
-      this.bound = getRelativeDatetime(this.ref.addMonths(3).date(), END_TIME);
+      this.bound = this.getBound();
     }
 
     protected virtual Date getThisQuarterStart() {
       return Date.newInstance(System.today().year(), getCurrentQuarterStartMonth(), 1);
+    }
+
+    protected virtual Datetime getBound() {
+      return this.ref.addMonths(3).addMinutes(END_TIME.minute()).addSeconds(END_TIME.second());
     }
   }
 
@@ -685,6 +689,11 @@ public without sharing abstract class RollupDateLiteral {
   private class ThisFiscalQuarterLiteral extends ThisQuarterLiteral {
     protected override Date getThisQuarterStart() {
       return FISCAL_INFO.CurrentQuarterStartDate;
+    }
+
+    protected override Datetime getBound() {
+      // some insane YoY differences between THIS_QUARTER and THIS_FISCAL_QUARTER ...
+      return super.getBound().addSeconds(-1);
     }
   }
 
