Reducing heap usage for invocables

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -611,11 +611,11 @@ global without sharing virtual class Rollup {
 
     // these are listed with the optional properties because otherwise Flow builders always have to check for null after using a Get Records
     // element with filter conditions; the Flow engine otherwise isn't satisfied because Get Records returns null instead of an empty list
-    // and null isn't a valid collection variable reference for a required field
+    // and null isn't a valid collection variable reference for a required field. Listed as transient to avoid blowing up the heap while logging
     @InvocableVariable(label='Records to rollup' description='Records to rollup to parent/related item(s)')
-    global List<SObject> recordsToRollup = new List<SObject>();
+    global transient List<SObject> recordsToRollup = new List<SObject>();
     @InvocableVariable(label='Prior records to rollup' description='The old version of the records for update/upsert')
-    global List<SObject> oldRecordsToRollup = new List<SObject>();
+    global transient List<SObject> oldRecordsToRollup = new List<SObject>();
 
     @InvocableVariable(
       label='Should rollup to ultimate hierarchy parent'
