Adding default recalc value support for FIRST/LAST operations thanks to Joseph Mason

--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -19,6 +19,20 @@ private class RollupCalculatorTests {
   }
 
   @IsTest
+  static void fullRecalcDefaultUsedInsteadOfNullWhenSupplied() {
+    Integer defaultVal = 0;
+    Rollup__mdt metadata = configureOrderByMetadata(
+      new Rollup__mdt(CalcItem__c = 'Opportunity', FullRecalculationDefaultNumberValue__c = defaultVal),
+      'CloseDate'
+    );
+    RollupCalculator calc = getCalculator(0, Rollup.Op.FIRST, Opportunity.Amount, Account.AnnualRevenue, metadata, '0011g00003VDGbF002', Account.Id);
+
+    calc.performRollup(new List<Opportunity>(), new Map<Id, SObject>());
+
+    System.assertEquals(defaultVal, calc.getReturnValue());
+  }
+
+  @IsTest
   static void shouldReturnFirstValueBasedOnMetadataField() {
     Rollup__mdt metadata = configureOrderByMetadata(new Rollup__mdt(CalcItem__c = 'Opportunity'), 'CloseDate');
     RollupCalculator calc = getCalculator(0, Rollup.Op.FIRST, Opportunity.Amount, Account.AnnualRevenue, metadata, '0011g00003VDGbF002', Account.Id);
